--- a/package.json
+++ b/package.json
@@ -10,5 +10,18 @@
   },
   "dependencies": {
     "astro": "^5.13.5"
-  }
+  },
+  "description": "```sh npm create astro@latest -- --template basics ```",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AryanBansal-launch/Astro-test.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AryanBansal-launch/Astro-test/issues"
+  },
+  "homepage": "https://github.com/AryanBansal-launch/Astro-test#readme"
 }
