--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "test",
   "type": "module",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
