new setup of ssr

--- a/package.json
+++ b/package.json
@@ -1,36 +1,19 @@
 {
-  "name": "test",
+  "name": "astro-ssr-test",
   "type": "module",
   "version": "0.0.1",
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "start": "node server.mjs",
+    "start": "node ./dist/server/entry.mjs",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/node": "^9.4.3",
-    "@contentstack/live-preview-utils": "^4.0.1",
-    "astro": "^5.13.5",
-    "contentstack": "^3.26.2",
-    "express": "^4.21.1"
+    "astro": "^5.13.5"
   },
-  "description": "```sh npm create astro@latest -- --template basics ```",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AryanBansal-launch/Astro-test.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AryanBansal-launch/Astro-test/issues"
-  },
-  "homepage": "https://github.com/AryanBansal-launch/Astro-test#readme"
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
